--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "Python Container Action Template"
 description: "Get started with Python Container actions"
-author: "Yaaxis"
+author: "YaakXis"
 inputs:
   myInput:
     description: "Input to use"
