--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types: [synchronize]
 
 env:
   IMAGE_NAME: experimentga
