--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Install pytest
-      run: pip install pytestß
+      run: pip install pytest
 
     - name: Run pytest
       run: pytest
