--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,20 +6,11 @@ on:
       - synchronize
 env:
   IMAGE_NAME: experimentga
+
 jobs:
   lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.9
-      - name: Install flake8
-        run: pip install flake8
-      - name: Run flake8
-        run: flake8 .
+    uses: ./.github/actions/python-lint
+    
   test:
     needs: lint
     runs-on: ubuntu-latest
