--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   lint:
-    uses: ./.github/workflows/python-lint.yml@feature/ga-testing
+    uses: ./.github/workflows/python-lint.yml
     
   test:
     needs: lint
