--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,42 +9,12 @@ env:
 
 jobs:
   lint:
-    uses: ./.github/workflows/python-lint.yaml
+    uses: ./.github/workflows/python-lint.yml
     
   test:
     needs: lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.9
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Install pytest
-        run: pip install pytest
-      - name: Run pytest
-        run: pytest
+    uses: ./.github/workflows/integration.yml
+
   build:
     needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: YaakXis
-          password: ${{ secrets.YAAXIS_DOCKER_PASSWORD }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
+    uses: ./.github/workflows/docker-build.yml
