--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: YaakXis
-          password: ${{ secrets.YAAXIS_DOCKER_PASSWORD }}
+          username: yaakxis
+          password: ${{ secrets.YAAXIS_DOCKER_USER }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
