--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: yaakxis
-          password: ${{ secrets.YAAXIS_DOCKER_PASSWORD }}
+          password: ${{ secrets.YAAKXIS_DOCKER_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
