--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,21 +17,6 @@ jobs:
 
   build:
     needs: test
-    runs-on: ubuntu-latest
-    # uses: ./.github/workflows/docker-build.yml
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: yaakxis
-          password: ${{ secrets.YAAKXIS_DOCKER_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
+    uses: ./.github/workflows/docker-build.yml
+    secrets:
+      dockerhub-token: ${{ secrets.YAAKXIS_DOCKER_TOKEN }}
