--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,6 +10,7 @@ on:
         required: true
 
 env:
+  REPO_NAME: experimentga
   IMAGE_NAME: experimentga
 
 jobs:
@@ -26,8 +27,8 @@ jobs:
           username: yaakxis
           password: ${{ secrets.dockerhub-token }}
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:latest
