yml is useless?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - uses: ./.github/actions/python-lint.yml
+      - uses: ./.github/actions/python-lint
         with:
           python-version: 3.9
     
