proper configuration of an action

--- a/.github/actions/python-lint/action.yml
+++ b/.github/actions/python-lint/action.yml
@@ -1,7 +1,7 @@
 ---
 name: 'Lint Python Code'
 description: 'using flask89 to lint my python code'
-input:
+inputs:
   python-version:
     description: "Python version we want to lint by"
     required: true
@@ -15,6 +15,8 @@ runs:
 
     - name: Install flake8
       run: pip install flake8
+      shell: bash
       
     - name: Run flake8
       run: flake8 .
+      shell: bash
