--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,9 @@ env:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - uses: ./.github/actions/python-lint
-        with:
-          python-version: 3.9
+    uses: ./.github/workflows/python-lint.yml
+    with:
+      python-version: 3.9
     
   test:
     needs: lint
