--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
       - checkout
       - setup_remote_docker # Enable Docker commands in the job
       - login_to_docker_hub
+      - run: echo "Image name is ${IMAGE_NAME}"
       - run: docker build --tag $IMAGE_NAME:latest .
       - run: docker push $IMAGE_NAME:latest
 
