--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,8 @@ workflows:
   pr:
     when:
       and:
-        - not: << pipeline.parameters.run-schedule >>
+        - not: 
+            equal: [ "scheduled_pipeline", << pipeline.trigger_source >> ]
         - not:
             or:
               - equal: [ "master", << pipeline.git.branch >> ]
@@ -79,7 +80,8 @@ workflows:
   on-merge:
     when:
       and:
-        - not: << pipeline.parameters.run-schedule >>
+        - not: 
+            equal: [ "scheduled_pipeline", << pipeline.trigger_source >> ]
         - or:
           - equal: [ "master", << pipeline.git.branch >> ]
     jobs:
