--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,8 +59,8 @@ workflows:
   pr:
     when:
       and:
-        - not:
-            matches: { pattern: *deployment_branches, value: "main" }
+        # - not:
+        #     matches: { pattern: *deployment_branches, value: "main" }
         - not: 
             equal: [ "scheduled_pipeline", << pipeline.trigger_source >> ]
     jobs:
@@ -73,7 +73,7 @@ workflows:
   on-merge:
     when:
       and:
-        - matches: { pattern: *deployment_branches, value: "main" }
+        # - matches: { pattern: *deployment_branches, value: "main" }
         - not: 
             equal: [ "scheduled_pipeline", << pipeline.trigger_source >> ]
     jobs:
