--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # CircleCI configuration file
 version: 2.1
 
-deployment_branches: &deployment_branches '[master, dev, test, demo, release, prod, main]'
+# deployment_branches: &deployment_branches [master, dev, test, demo, release, prod, main]
 
 # Define reusable commands
 commands:
@@ -60,7 +60,7 @@ workflows:
     when:
       and:
         - not:
-            matches: { pattern: *deployment_branches, value: "main" }
+            matches: { pattern: "[master, dev, test, demo, release, prod, main]", value: "main" }
         - not: 
             equal: [ "scheduled_pipeline", << pipeline.trigger_source >> ]
     jobs:
@@ -73,7 +73,7 @@ workflows:
   on-merge:
     when:
       and:
-        - matches: { pattern: *deployment_branches, value: "main" }
+        - matches: { pattern: "[master, dev, test, demo, release, prod, main]", value: "main" }
         - not: 
             equal: [ "scheduled_pipeline", << pipeline.trigger_source >> ]
     jobs:
