--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,14 +13,8 @@ env:
   IMAGE_NAME: experimentga
 
 jobs:
-  lint:
-    uses: ./.github/workflows/jobs/python-lint.yml
-    with:
-      python-version: 3.9
-    
-  test:
-    needs: lint
-    uses: ./.github/workflows/jobs/integration.yml
+  pr:
+    uses: ./.github/workflows/pr.yml
 
   build:
     needs: test
