--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -11,6 +11,7 @@ on:
       - demo
 env:
   IMAGE_NAME: experimentga
+  REPO_NAME: yaakxis
 
 jobs:
   pr:
@@ -18,6 +19,20 @@ jobs:
 
   build:
     needs: test
-    uses: ./.github/workflows/jobs/docker-build.yml
-    secrets:
-      dockerhub-token: ${{ secrets.YAAKXIS_DOCKER_TOKEN }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: yaakxis
+          password: ${{ secrets.YAAKXIS_DOCKER_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:latest
