for composite adtions we have to checkout first

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,6 +10,8 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - uses: ./.github/actions/python-lint
         with:
           python-version: 3.9
@@ -18,6 +20,8 @@ jobs:
     needs: lint
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - uses: ./.github/actions/get-pytest
         with:
           python-version: 3.9
