--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -10,8 +10,10 @@ on:
       - dev
       - demo
 env:
-  IMAGE_NAME: experimentga
-  REPO_NAME: yaakxis
+  ACCOUNTID: 952256534162
+  IMAGE_NAME: experiment-ga
+  AWSZONE: us-east-1
+  REPO_NAME: cicd
 
 jobs:
   pr:
@@ -25,14 +27,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - uses: ./.github/actions/aws-connect
         with:
-          username: yaakxis
-          password: ${{ secrets.YAAKXIS_DOCKER_TOKEN }}
+          access-key: ${{ secrets.ACCESS_KEY }}
+          secret-key: ${{ secrets.SECRET_KEY }}
+          aws-service: ECR
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.ACCOUNTID }}.dkr.ecr.${{ env.AWSZONE }}.amazonaws.com/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:latest
