--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -37,4 +37,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.ACCOUNTID }}.dkr.ecr.${{ env.AWSZONE }}.amazonaws.com/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.ACCOUNTID }}.dkr.ecr.${{ env.AWSZONE }}.amazonaws.com/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:ga
