login to ecr rather then dockerhub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker # Enable Docker commands in the job
-      - login_to_docker_hub
+      - login_to_ecr
       - run: echo "Image name is ${IMAGE_NAME}"
       - run: docker build --tag $REPO_NAME/$IMAGE_NAME:latest .
       - run: docker push $REPO_NAME/$IMAGE_NAME:cci
