--- a/.github/actions/aws-connect/action.yml
+++ b/.github/actions/aws-connect/action.yml
@@ -24,8 +24,11 @@ runs:
       if: contains(inputs.aws-service, 'ECR')
       shell: bash
       run: |
+        echo "Logging in to Amazon ECR..."
         ECR_PASSWORD=$(aws ecr get-login-password)
+        echo "ECR password: $ECR_PASSWORD"
         echo $ECR_PASSWORD | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+        echo "Logged in to Amazon ECR"
     - name: Log in to Amazon EKS
       if: contains(inputs.aws-service, 'EKS')
       shell: bash
