--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,7 +29,7 @@ jobs:
         run: pytest
 
   run_in_container:
-    needs: scheduled_job
+    runs-on: ubuntu-latest
     container:
       image: 952256534162.dkr.ecr.us-east-1.amazonaws.com/cicd:2023.08.24-oliver-e6a30eb
       credentials:
