--- a/Dockerfile-cicd
+++ b/Dockerfile-cicd
@@ -12,11 +12,11 @@ RUN apt install -y vim less groff bash-completion
 RUN git version
 
 # install AWS CLI
-RUN wget https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -nv -O awscliv2.zip \
- && unzip awscliv2.zip \
- && ./aws/install \
- && rm awscliv2.zip \
- && rm -fr ./aws
+#RUN wget https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -nv -O awscliv2.zip \
+# && unzip awscliv2.zip \
+# && ./aws/install \
+# && rm awscliv2.zip \
+# && rm -fr ./aws
 
 # install terraform version manager
 RUN curl -L https://raw.githubusercontent.com/warrensbox/terraform-switcher/release/install.sh -o install-tfswitch.sh \
@@ -24,20 +24,20 @@ RUN curl -L https://raw.githubusercontent.com/warrensbox/terraform-switcher/rele
  && rm install-tfswitch.sh
 
 # install golang
-ENV PATH=/usr/local/go/bin:$PATH
-RUN wget -nv https://go.dev/dl/go1.20.3.linux-amd64.tar.gz \
- && tar -C /usr/local -xzf go1.20.3.linux-amd64.tar.gz \
- && rm -fr go1.20.3.linux-amd64.tar.gz \
- && go version
+#ENV PATH=/usr/local/go/bin:$PATH
+#RUN wget -nv https://go.dev/dl/go1.20.3.linux-amd64.tar.gz \
+# && tar -C /usr/local -xzf go1.20.3.linux-amd64.tar.gz \
+# && rm -fr go1.20.3.linux-amd64.tar.gz \
+# && go version
 
 # create user/group
 RUN groupadd gdevops \
  && useradd -ms /bin/bash -g gdevops -G docker devops
 
 # install serverless framework
-RUN mkdir /home/devops/.npm-global \
- && npm config set prefix /home/devops/.npm-global \
- && npm install -g serverless@1.36.3
+#RUN mkdir /home/devops/.npm-global \
+# && npm config set prefix /home/devops/.npm-global \
+# && npm install -g serverless@1.36.3
 
 # install terraform
 USER devops:gdevops
