create cicd docker image and store in ghcr.io

--- a/.github/workflows/create-cicd-container-image.yml
+++ b/.github/workflows/create-cicd-container-image.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Log in to the Container registry
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REGISTRY: ${{ env.REGISTRY }}
           GH_USERNAME: ${{ github.actor }}
-        run: echo ${GH_TOKEN} | docker login ${GH_REGISTRY} --username ${GH_USERNAME} --password-stdin
+          DOCKER_REGISTRY: ${{ env.DOCKER_REGISTRY }}
+        run: echo ${GH_TOKEN} | docker login ${DOCKER_REGISTRY} --username ${GH_USERNAME} --password-stdin
       - name: Build and push Docker image
         env:
           GH_REGISTRY: ${{ env.DOCKER_REGISTRY }}
