--- a/.github/workflows/weekly-security-scan.yml
+++ b/.github/workflows/weekly-security-scan.yml
@@ -1,7 +1,7 @@
 name: Scan code base once a week to remain on free tier
 on:
   schedule:
-    - cron: '*/10 * * * *'  # every 10 minutes
+    - cron: '0 1 * * *'  # every 10 minutes
 
 jobs:
   get_pwd:
