--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,12 @@ executors:
   build-machine:
     docker:
       - image: cimg/aws:2023.08
-      
+  xaxis-cicd:
+    docker:
+      - image: << pipeline.parameters.build-image >
+        aws_auth:
+            aws_access_key_id: $ACCESS_KEY  # can specify string literal values
+            aws_secret_access_key: $SECRET_KEY  # or project UI envar reference
 # Define jobs
 jobs:
   lint:
@@ -61,11 +66,7 @@ jobs:
   #     - install_pytest
   #     - run: pytest
   test:
-    docker:
-      - image: << pipeline.parameters.build-image >
-    aws_auth:
-      aws_access_key_id: $ACCESS_KEY  # can specify string literal values
-      aws_secret_access_key: $SECRET_KEY  # or project UI envar reference
+    executor: xaxis-cicd
     steps:
       - checkout
       - install_dependencies
