--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ executors:
       - image: cimg/aws:2023.08
   xaxis-cicd:
     docker:
-      - image: << pipeline.parameters.build-image >
+      - image: << pipeline.parameters.build-image >>
         aws_auth:
             aws_access_key_id: $ACCESS_KEY  # can specify string literal values
             aws_secret_access_key: $SECRET_KEY  # or project UI envar reference
