--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,7 @@ commands:
       - run: pip install flake8
   install_dependencies:
     steps:
-      - run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - run: pip install -r requirements.txt
   install_pytest:
     steps:
       - run: pip install pytest
